r3 (0.3.0 stable):
	* Fixed bugs on configuration and eject functions
	* Now it's posible to change from play to pause and vice versa just clicking in the icon
	* Now it's posible to set the device from the command line, ideal when the device is mounted by another program (for example, by Thunar)
	* Check if another istance of program is running
at 29/03/2010 on 12:05 hours
 
r4 (0.3.1 stable):
	* Fixed bug on checking if another instance of scdp is running
at 30/03/2012 on 13:15 hours
 
r5 (0.3.5 stable):
	* Added new command line parameters
on 31/03/2012 at 13:23 hours
 
r6 (0.4.0 stable):
	* Name changed to CD Tray (thanks to proper from Desdelinux's chat and forum user)
	* Added "About" dialog
	* Updated english translation
on 04/04/2012 at 23:15 hours